Fixed spacing issue under image

--- a/css/blocks/card.css
+++ b/css/blocks/card.css
@@ -8,4 +8,5 @@
   border-radius: .125rem;
   width: 100%;
   height: auto;
+  vertical-align: middle;
 }
